--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/featurecounts_galaxy_wrapper"]
 	path = tools/featurecounts_galaxy_wrapper
 	url = https://github.com/ErasmusMC-Bioinformatics/featurecounts_galaxy_wrapper
+[submodule "tools/flaimapper_galaxy_wrapper"]
+	path = tools/flaimapper_galaxy_wrapper
+	url = https://github.com/ErasmusMC-Bioinformatics/flaimapper_galaxy_wrapper
