--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "tools/crossmap_galaxy_wrapper"]
 	path = tools/crossmap_galaxy_wrapper
 	url = https://github.com/ErasmusMC-Bioinformatics/crossmap_galaxy_wrapper.git
+[submodule "tools/edger_galaxy_wrapper"]
+	path = tools/edger_galaxy_wrapper
+	url = https://github.com/ErasmusMC-Bioinformatics/edger_galaxy_wrapper.git
