--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "tools/edger_galaxy_wrapper"]
 	path = tools/edger_galaxy_wrapper
 	url = https://github.com/ErasmusMC-Bioinformatics/edger_galaxy_wrapper.git
+[submodule "tools/show_metadata_galaxy_wrapper"]
+	path = tools/show_metadata_galaxy_wrapper
+	url = https://github.com/ErasmusMC-Bioinformatics/show_metadata_galaxy_wrapper.git
